# NIDAQ-code

./: CMakeLists.txt  Christopher_McDougall_Born_To_Run_Fred_Sanders_FerraBit__mininova_.torrent  Getting nivisa start scripts to run on RHEL 7.docx  README.md  SinG+AI+AO.cpp  SineCustom.cpp  VoltGen6221.cpp  nidaqAI6216.cpp  nidaqAO6221 (WRK).cpp  nidaqAO6221.cpp  package.xml
New Folder/src/: Ayan6216.cpp  nidaqAI6221.cpp  nidaqAO6221.cpp  pwmSig6216.cpp
message/: analogInput.msg  analogOutput.msg
src/: Modified6221.cpp  VoltGen6221_test.cpp  nidaqAO6216.cpp  nidaqAO6221 (copy).cpp
src2/: Modified6216_p1.cpp  Modified6221_p2.cpp  ModifiedIni.cpp  nidaqAO6221 (with explanation).cpp
